--- a/index.html
+++ b/index.html
@@ -1,16 +1,12 @@
 <!DOCTYPE HTML>
-<!-- Original design: https://html5up.net/aerial -->
-<!-- Background: http://bennettfeely.com/gradients/ -->
-<html>
 	<head>
-		<title>Emily Black</title>
+		<title>About Niculescu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+
 	</head>
 	<body class="loading">
 		<div id="wrapper">
@@ -19,14 +15,14 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1>Emily Black</h1>
-					<p>Coder &nbsp;&bull;&nbsp; Gamer &nbsp;&bull;&nbsp; Thinker</p>
+					<h1>About Ana Niculescu</h1>
+					<p>QA &nbsp;&bull;&nbsp; Coder &nbsp;&bull;&nbsp; Thinker</p>
 					<nav>
 						<ul>
-							<li><a href="EmilyBlackResume.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
-							<li><a href="https://github.com/EmilyBlack95" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://linkedin.com/in/EmilyBlack95/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							<li><a href="mailto:emily@ou.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="cv.pdf" class="icon fa-file-text"><span class="label">Resume</span></a></li>
+							<li><a href="https://github.com/annanicullescu" class="icon fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.linkedin.com/in/ana-niculescu-39889871" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="mailto:anna.nicullescu@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 					</nav>
 				</header>
